add support for i8nally

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -7,6 +7,7 @@ date: 2022-10-05T09:30:49.408Z
 tags:
   - test1234
 lastmod: 2022-10-05T09:31:02.103Z
+type: default
 ---
 
 Hello, I am _Post One._
