move image to static folder

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -21,14 +21,11 @@ It can be daunting to begin but the rewards - and the journey itself - make lear
 
 Here are some tips and tricks to help keep you motivated and making progress, even during the first few weeks.
 
+![alt](/img/blogs/Blog1instrument.png)
 
-![intruments](Blog1instrument.png)
-![alt](images/Blog1instrument.png-thumbnail)
-
-![intruments](Users/lilly/projectlam.org/src/routes/blog/images/Blog1instrument.png)
 
 ### BE CONSISTENT.
-Just like studying for a test over the course of a week instead of cramming the night before will get you better results, practicing every day (or as consistently as possible) will speed up your progress. Even if you can only pick up your instrument for a few minutes a day, if you make a point of doing it every day, you're more likely to keep going. Once you've made practicing a habit you enjoy, it becomes easier to practice longer and work on more ambitious skills. It might not seem like you're making huge strides from one day to the next, but you'll be amazed at how far you can progress in a month or two alone a year. And if you miss a day, remember - in terms of the big picture, missing one day won't ruin your progress, so don't stress about it. Start again the next day and keep going from there. That way, you can keep the joy alive and avoid burnout.
+Just like studysting for a test over the course of a week instead of cramming the night before will get you better results, practicing every day (or as consistently as possible) will speed up your progress. Even if you can only pick up your instrument for a few minutes a day, if you make a point of doing it every day, you're more likely to keep going. Once you've made practicing a habit you enjoy, it becomes easier to practice longer and work on more ambitious skills. It might not seem like you're making huge strides from one day to the next, but you'll be amazed at how far you can progress in a month or two alone a year. And if you miss a day, remember - in terms of the big picture, missing one day won't ruin your progress, so don't stress about it. Start again the next day and keep going from there. That way, you can keep the joy alive and avoid burnout.
 
 FIRST, DEFINE YOUR GOALS.
 
