fix blog index page

--- a/src/lib/locales/en/site.json
+++ b/src/lib/locales/en/site.json
@@ -55,7 +55,7 @@
   "site.footer.contact": "Contact",
 
 
-  "blog.title": "blog title",
+  "blog.title": "Our Blogs",
   
 
   "about.title": "All About Lam Project"
