--- a/src/lib/locales/en/site.json
+++ b/src/lib/locales/en/site.json
@@ -1,10 +1,10 @@
 {
-  "home.title": "Lam Project",
+  "home.title": "Project Lam",
   "home.opensource": "Open source",
   "home.learning": "for learning",
   "home.worlds": "the worlds",
   "home.instruments": "instruments",
-  "home.sec1_title": "Lam Project",
+  "home.sec1_title": "Project Lam",
   "home.sec1_working": "is working on building software that helps people learn",
   "home.sec1_heritage": "heritage instruments",
   "home.sec1_from": "from all around the world. We have an open-source program that lets people",
@@ -58,7 +58,7 @@
   "blog.title": "blog title",
   
 
-  "about.title": "All About Lam Project"
+  "about.title": "All About Project Lam"
   
   
 }
