add 1st blog, update video&screenshot
- add 1st blog, change embedded text color  
- replace our video and screenshot image
- comment not-active nav button (tutorials , community, More) and move to right side

--- a/src/lib/locales/en/site.json
+++ b/src/lib/locales/en/site.json
@@ -7,7 +7,7 @@
   "home.sec1_title": "Project Lam",
   "home.sec1_working": "is working on building software that helps people learn",
   "home.sec1_heritage": "heritage instruments",
-  "home.sec1_from": "from all around the world. We have an open-source program that lets people",
+  "home.sec1_from": "from all around the world. ",
   "home.sec1_learnmore": "Learn more about My Profile",
 
   "home.sec2_title": "Learn how to play",
