fix minor issues, edit video
edit keyboard video

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -2,7 +2,7 @@
 categories:
   - numbers
   - odd
-title: Successful Tips and Trick to Learn Guitar for Busy People
+title: SUCCESSFUL TIPS TO LEARN GUITAR FOR BUSY PEOPLE
 date: '2023-01-10'
 tags:
   - test1234
