read file from blog.md , hide unused button
- hide categories 
- read code blogs on the homepage and blog page from .md 
- make share buttons working
- code name blog title to capital only wanted positions 
-hide unused menu on footer

--- a/src/lib/locales/en/site.json
+++ b/src/lib/locales/en/site.json
@@ -55,7 +55,8 @@
   "site.footer.contact": "Contact",
 
 
-  "blog.title": "blog title",
+  "blog.title": "Blogs & News",
+  "blog.subtitle": "Find new ideas to learn with our news and blogposts",
   
 
   "about.title": "All About Project Lam"
