--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -2,13 +2,17 @@
 categories:
   - numbers
   - odd
-title: SUCCESSFUL TIPS TO LEARN GUITAR FOR BUSY PEOPLE
+title: Successful Tips To Learn Guitar For Busy People
 date: '2023-01-10'
 tags:
   - test1234
 lastmod: '2023-01-10T09:24:29.375Z'
 type: default
 image: /img/blog1_1.png
+blog: 1
+desc : Don't fret, though; these simple tips will help you enjoy learning while still managing your time.
+
+
 ---
 
 “I am Busy” is a phrase that we hear almost everyday. (I can relate to that as well) Nowadays, people are busy with both personal and professional life and it seems to eat up the time of enjoyment from your favorite guitar. Here are three tips and tricks to make busy people like you enjoy your time more with guitar.
@@ -36,10 +40,14 @@ image: /img/blog1_1.png
 
 **Try it! You will be surprised!**
 
+
+
+*Keep an eye out for announcements regarding our upcoming beta test! To receive the invitation, subscribe to our _[mailing list](#mailing)_ now!*
+
+*Follow us on Twitter  _[@ProjectLamHQ](https://twitter.com/ProjectLamHQ)_  to stay updated on our new updates.*
+
   Source:  
   https://jamesclear.com/atomic-habits  
   https://francescocirillo.com/products/the-pomodoro-technique
   https://guitargearfinder.com/guides/setting-ideal-guitar-practice-space
   https://jamesclear.com/power-of-environment
-
-
